[workspace]
resolver = "2"

members = ["do-math", "do-math-policy"]

[workspace.dependencies]
soroban-sdk = { version = "21.7.3" }
webauthn-wallet-interface = { git = "https://github.com/kalepail/passkey-kit", branch = "next" }

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true
